# om-nomnomnom

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
om-bench/: Cargo.toml  README.md
om-bench/benches/: openmetrics-parse.rs
om-bench/scripts/: py-reference-parser.py  rate.rb
om-bench/src/: lib.rs
om-nomnomnom/: Cargo.toml
om-nomnomnom/examples/: print-histogram.rs  print-perfdata.rs
om-nomnomnom/src/: lexer.rs  lib.rs  parser.rs  test.rs
om-nomnomnom/src/lexer/: types.rs
parse-tests/: README.md
parse-tests/counter_exemplars_empty_brackets/: test.json
parse-tests/counter_unit/: test.json
parse-tests/duplicate_timestamps_0/: test.json
parse-tests/duplicate_timestamps_1/: test.json
parse-tests/empty_brackets/: test.json
parse-tests/empty_help/: test.json
parse-tests/empty_label/: test.json
parse-tests/empty_metadata/: test.json
parse-tests/escaping/: test.json
parse-tests/exemplars_wide_chars/: test.json
parse-tests/exemplars_with_hash_in_label_values/: test.json
parse-tests/float_gauge/: test.json
parse-tests/gaugehistogram_exemplars/: test.json
parse-tests/hash_in_label_value/: test.json
parse-tests/help_escaping/: test.json
parse-tests/histogram_exemplars/: test.json
parse-tests/histogram_noncanonical/: test.json
parse-tests/info_timestamps/: test.json
parse-tests/label_escaping/: test.json
parse-tests/labels_and_infinite/: test.json
parse-tests/labels_with_curly_braces/: test.json
parse-tests/leading_zeros_float_gauge/: test.json
parse-tests/leading_zeros_simple_gauge/: test.json
parse-tests/nan/: test.json
parse-tests/nan_gauge/: test.json
parse-tests/negative_bucket_gaugehistogram/: test.json
parse-tests/negative_bucket_histogram/: test.json
parse-tests/no_metadata/: test.json
parse-tests/no_newline_after_eof/: test.json
parse-tests/null_byte/: test.json
parse-tests/roundtrip/: test.json
(+11 files in other folders)
