[package]
name = "om-nomnomnom"
version = "0.1.5"
edition = "2021"

[features]
default = [ "no_interleave_metric", "enforce_timestamp_monotonic", "validate_histogram_count", "hash_fnv", "generic_parse_error" ]

# Don't tally each unicode codepoint, instead assume a worst case of each charcter being
# two bytes (so max len = 256).
naive_wide_char_support = []

# Minor performance gain, duplicate_timestamp tests become non-deterministic
naive_label_hash = []

# Do not allow samples to be interleaved.  This is a time consuming validation.
no_interleave_metric = []

# Require timestamps to be in order.  This is a time consuming validation.
enforce_timestamp_monotonic = []

validate_histogram_count = []

# Use an FNV hasher insead of SipHash (rust's current default).  Slightly faster
# but potentially a DoS vector.
hash_fnv = [ "fnv" ]

# Include a catchall ParseError variant
generic_parse_error = []

[dependencies]
# If we put the binaries in a separate crate we can axe the anyhow and clap dependencies
anyhow = "1.0"
clap = { version = "3", features = [ "cargo", "derive" ] }
fnv = { version  = "1", optional = true }
itertools = "0.10"
lazy_static = "1.4"
nom = "7"
regex = "1"
serde = "*"
serde_derive = "*"
serde_json = { version = "1.0", features = [ "float_roundtrip" ] }
thiserror = "1.0"
tracing = { version = "0.1", features = [ "release_max_level_off" ] }

[dev-dependencies]
indoc = "1"
tracing-test = "0.1"
